Add the Validation for the Change Password.

--- a/Coditech.Project/Admin/Coditech.Admin/Views/User/ChangePassword.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/User/ChangePassword.cshtml
@@ -32,21 +32,21 @@
                                         <div class="form-group mb-2">
                                             @Html.LabelFor(x => x.CurrentPassword, new { @class = "form-label required" })
                                             <div class="input-group">
-                                                @Html.TextBoxFor(x => x.CurrentPassword, new { @class = "form-control" })
+                                                @Html.PasswordFor(x => x.CurrentPassword, new { @class = "form-control" })
                                             </div>
                                             @Html.ValidationMessageFor(m => m.CurrentPassword, null)
                                         </div>
                                         <div class="form-group mb-2">
                                             @Html.LabelFor(x => x.NewPassword, new { @class = "form-label required" })
                                             <div class="input-group">
-                                                @Html.TextBoxFor(x => x.NewPassword, new { @class = "form-control" })
+                                                @Html.PasswordFor(x => x.NewPassword, new { @class = "form-control" })
                                             </div>
                                             @Html.ValidationMessageFor(m => m.NewPassword, null)
                                         </div>
                                         <div class="form-group mb-2">
                                             @Html.LabelFor(x => x.ConfirmPassword, new { @class = "form-label required" })
                                             <div class="input-group">
-                                                @Html.TextBoxFor(x => x.ConfirmPassword, new { @class = "form-control" })
+                                                @Html.PasswordFor(x => x.ConfirmPassword, new { @class = "form-control" })
                                             </div>
                                             @Html.ValidationMessageFor(m => m.ConfirmPassword, null)
                                         </div>
