--- a/Coditech.Project/Admin/Coditech.Admin/Views/Organisation/OrganisationCentre/_OrganisationCentrewiseEmailTemplate.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Organisation/OrganisationCentre/_OrganisationCentrewiseEmailTemplate.cshtml
@@ -13,7 +13,11 @@
 <div class="col-lg-12">
     <div class="mb-3">
         @Html.LabelFor(x => x.EmailTemplate, new { @class = "form-label required" })
-        @Html.TextAreaFor(x => x.EmailTemplate, new { @class = "form-control", rows = "10" })
+        @Html.Partial("~/Views/Shared/Control/_HTMLEditor.cshtml", new HTMLEditorViewModel()
+   {
+       EditorName = "EmailTemplate",
+       EditorValue = Model.EmailTemplate
+   })
         @Html.ValidationMessageFor(x => x.EmailTemplate)
     </div>
 </div>
