--- a/Coditech.Project/Admin/Coditech.Admin/Views/MediaManager/MediaManagerDetails/_MediaDetails.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/MediaManager/MediaManagerDetails/_MediaDetails.cshtml
@@ -24,7 +24,7 @@
                 <div class="card">
                     <div class="card-body">
                         @* <small class="float-end">62%</small> *@
-                        <h6 class="mt-0">@Model.TotalFileSize MB Used</h6>
+                        <h6 class="mt-0 mb-0">@Model.TotalFileSize MB Used</h6>
 @*                         <div class="progress" style="height: 5px;">
                             <div class="progress-bar bg-success" role="progressbar" style="width: 62%;" aria-valuenow="62" aria-valuemin="0" aria-valuemax="100"></div>
                         </div> *@
