--- a/Coditech.Project/Admin/Coditech.Admin/Views/MediaManager/MediaManagerDetails/_MediaFileList.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/MediaManager/MediaManagerDetails/_MediaFileList.cshtml
@@ -1,19 +1,24 @@
 ﻿@model List<Coditech.Common.API.Model.Media>
 <div class="card-body">
-    <div class="file-box-content">
+    <div class="d-flex file-box-content flex-wrap gap-3 justify-content-start">
         @foreach (var media in Model)
         {
             <div class="file-box">
-                <a class="download-icon-link" data-media-id="@media.MediaId" onclick="openDeleteFileModal('@media.MediaId', '@media.ActiveFolderId')">
-                    <i class="dripicons-cross file-download-icon"></i>
-                </a>
-                <a href="@media.MediaPath" class="download-icon-link">
-                    <i class="dripicons-download file-download-icon"></i>
-                </a>               
-                <div class="text-center">
-                    <img src="@media.MediaPath" alt="@media.MediaName" class="img-thumbnail" style="max-width: 100px; max-height: 100px;">
-                    <h6 class="text-truncate">@media.MediaName</h6>
-                </div>               
+                <div class="align-items-center card-action-block d-flex flex-row-reverse justify-content-between mb-2">
+                    <a class="download-icon-link" data-media-id="@media.MediaId" onclick="openDeleteFileModal('@media.MediaId', '@media.ActiveFolderId')">
+                        <i class="dripicons-cross file-download-icon"></i>
+                    </a>
+                    <a href="@media.MediaPath" class="download-icon-link">
+                        <i class="dripicons-download file-download-icon"></i>
+                    </a>
+                </div>
+                <div class="d-flex align-items-center justify-content-center flex-column">
+                    <div class="card-image-info">
+                        @* <img src="@media.MediaPath" alt="@media.MediaName" class="img-thumbnail"> *@
+                        <img src="https://upload.wikimedia.org/wikipedia/en/f/f8/Dummy_Title_Card.jpeg" alt="@media.MediaName" class="img-thumbnail">
+                    </div>
+                    <h6 class="text-truncate" title="@media.MediaName">@media.MediaName</h6>
+                </div>
             </div>
         }
     </div>
