--- a/Coditech.Project/Admin/Coditech.Admin/wwwroot/css/layout/site.css
+++ b/Coditech.Project/Admin/Coditech.Admin/wwwroot/css/layout/site.css
@@ -282,14 +282,69 @@ td.text-center a.btn {
     position: relative;
 }
 
-.password-input-wraper i {
-    position: absolute;
-    right: 10px;
-    top: 10px;
-    cursor: pointer;
-}
+    .password-input-wraper i {
+        position: absolute;
+        right: 10px;
+        top: 10px;
+        cursor: pointer;
+    }
+
 #LogIn_Tab .custom-switch.switch-success #customSwitchSuccess {
     position: relative;
     top: 2px;
 }
 
+#MediaUpload .files-nav .nav .nav-link {
+    padding: 3px 0 !important;
+}
+
+    #MediaUpload .files-nav .nav .nav-link svg path {
+        fill: #ffcc66;
+    }
+#MediaUpload .file-box-content .file-box .download-icon-link .file-download-icon {
+    font-size: 13px;
+    position: relative;
+    top: 0;
+    left: 0;
+    cursor:pointer;
+}
+#MediaUpload .file-box-content .file-box {
+    border-radius: 6px;
+    padding: 10px;
+    width: 160px;
+    display: inline-block;
+    margin-right: 0;
+    margin-bottom: 0;
+    background-color: #fff;
+}
+.card-image-info {
+    display: flex;
+    max-width: 120px;
+    min-height: 120px;
+    justify-content: center;
+    align-items: center;
+    border: 1px solid #eaf0f9;
+}
+.card-image-info img.img-thumbnail {
+    width: 100%;
+    height: 100%;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    border: none;
+}
+#MediaUpload .file-box-content .file-box h6 {
+    display: block;
+    max-width: 100%;
+    -webkit-line-clamp: 1;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+#MediaUpload .file-box-content .file-box i.dripicons-cross {
+    color: #f5325c;
+}
+#MediaUpload .file-box-content .file-box i.dripicons-download {
+    color: #03d87f;
+}
