Media Uploader UI changes

--- a/Coditech.Project/Admin/Coditech.Admin/Views/MediaManager/MediaManagerDetails/_MediaFileList.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/MediaManager/MediaManagerDetails/_MediaFileList.cshtml
@@ -14,8 +14,7 @@
                 </div>
                 <div class="d-flex align-items-center justify-content-center flex-column">
                     <div class="card-image-info">
-                        @* <img src="@media.MediaPath" alt="@media.MediaName" class="img-thumbnail"> *@
-                        <img src="https://upload.wikimedia.org/wikipedia/en/f/f8/Dummy_Title_Card.jpeg" alt="@media.MediaName" class="img-thumbnail">
+                        <img src="@media.MediaPath" alt="@media.MediaName" class="img-thumbnail">
                     </div>
                     <h6 class="text-truncate" title="@media.MediaName">@media.MediaName</h6>
                 </div>
