Access of Operation (Delete, Create, Move, Rename, Upload)

--- a/Coditech.Project/Admin/Coditech.Admin/Views/MediaManager/MediaManagerDetails/_FolderStructure.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/MediaManager/MediaManagerDetails/_FolderStructure.cshtml
@@ -2,32 +2,75 @@
 
 @{
     string active = Model.IsActiveFolder ? "active" : "";
+    UserModel userInfo = SessionHelper.GetDataFromSession<UserModel>(AdminConstants.UserDataSession);
+
+    AdminRoleMediaFolderActionModel adminRoleMediaFolderActionModel = new AdminRoleMediaFolderActionModel();
+    if (!userInfo.IsAdminUser)
+    {
+        if (userInfo?.AdminRoleMediaFolderActionList?.Count > 0)
+        {
+            adminRoleMediaFolderActionModel = userInfo?.AdminRoleMediaFolderActionList.Where(x => x.AdminRoleMasterId == userInfo.SelectedAdminRoleMasterId).FirstOrDefault();
+        }
+    }
 }
 
-<div class="nav-link d-flex align-items-center @active folder-container"
-     data-folder-id="@Model.RootFolderId"
-     id="files-@Model.RootFolderId-tab"
-     role="button"
-     aria-expanded="true"
-     aria-controls="collapseFolder-@Model.RootFolderId"
-     oncontextmenu="showContextMenu(event, '@Model.RootFolderId', '@Model.RootFolderName')">
-    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 0 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-folder align-self-center icon-dual-file icon-xs me-3 folder-click">
-        <path d="M22 19a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h5l2 3h9a2 2 0 0 1 2 2z"></path>
-    </svg>
-    <div class="d-inline-block align-self-center flex-grow-1 folder-click">
-        <h5 class="m-0">@Model.RootFolderName</h5>
+@if ((userInfo?.IsAdminUser ?? false) || adminRoleMediaFolderActionModel.SelectedMediaActions.Any(x => x.Equals("ViewFolder")))
+{
+    <div class="nav-link d-flex align-items-center @active folder-container"
+         data-folder-id="@Model.RootFolderId"
+         id="files-@Model.RootFolderId-tab"
+         role="button"
+         aria-expanded="true"
+         aria-controls="collapseFolder-@Model.RootFolderId"
+         oncontextmenu="showContextMenu(event, '@Model.RootFolderId', '@Model.RootFolderName')">
+        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 0 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-folder align-self-center icon-dual-file icon-xs me-3 folder-click">
+            <path d="M22 19a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h5l2 3h9a2 2 0 0 1 2 2z"></path>
+        </svg>
+        <div class="d-inline-block align-self-center flex-grow-1 folder-click">
+            <h5 class="m-0">@Model.RootFolderName</h5>
+        </div>
+        <i class="mdi mdi-chevron-up text-muted me-2 collapse-icon" style="display: none;"></i>
+        <i class="mdi mdi-chevron-down text-muted me-2 collapse-icon"></i>
     </div>
-    <i class="mdi mdi-chevron-up text-muted me-2 collapse-icon" style="display: none;"></i>
-    <i class="mdi mdi-chevron-down text-muted me-2 collapse-icon"></i>
-</div>
+}
 
 <!-- Context Menu -->
-<div id="contextMenu" class="dropdown-menu" style="display: none; position: absolute;">
-    <a class="dropdown-item" id="createFolder">Create Folder</a>
-    <a class="dropdown-item" id="deleteFolder">Delete</a>
-    <a class="dropdown-item" id="renameFolder" onclick="openRenameFolderModal('@Model.RootFolderId', '@Model.RootFolderName')">Rename</a>
-    <a class="dropdown-item" id="moveFolder" onclick="openMoveFolderModal('@Model.RootFolderId')">Move</a>
-</div>
+@if ((userInfo?.IsAdminUser ?? false) || adminRoleMediaFolderActionModel.SelectedMediaActions.Count > 0)
+{
+    <div id="contextMenu" class="dropdown-menu" style="display: none; position: absolute;">
+        @if ((userInfo?.IsAdminUser ?? false) || adminRoleMediaFolderActionModel.SelectedMediaActions.Any(x => x.Equals("CreateFolder")))
+        {
+            <a class="dropdown-item" id="createFolder">Create Folder</a>
+        }else
+        {
+            <div id="createFolder" style="display:none;"></div>
+        }
+        @if ((userInfo?.IsAdminUser ?? false) || adminRoleMediaFolderActionModel.SelectedMediaActions.Any(x => x.Equals("DeleteFolder")))
+        {
+            <a class="dropdown-item" id="deleteFolder">Delete</a>
+        }
+        else
+        {
+            <div id="deleteFolder" style="display:none;"></div>
+        }
+        @if ((userInfo?.IsAdminUser ?? false) || adminRoleMediaFolderActionModel.SelectedMediaActions.Any(x => x.Equals("RenameFolder")))
+        {
+            <a class="dropdown-item" id="renameFolder" onclick="openRenameFolderModal('@Model.RootFolderId', '@Model.RootFolderName')">Rename</a>
+        }
+        else
+        {
+            <div id="renameFolder" style="display:none;"></div>
+        }
+        @if ((userInfo?.IsAdminUser ?? false) || adminRoleMediaFolderActionModel.SelectedMediaActions.Any(x => x.Equals("MoveFolder")))
+        {
+            <a class="dropdown-item" id="moveFolder" onclick="openMoveFolderModal('@Model.RootFolderId')">Move</a>
+        }
+        else
+        {
+            <div id="moveFolder" style="display:none;"></div>
+        }
+    </div>
+}
 
 <div class="collapse show" id="collapseFolder-@Model.RootFolderId">
     @if (Model.SubFolders.Any())
