Code Check in HospitalPathologyTestPrices.

--- a/Coditech.Project/Admin/Coditech.Admin/Views/HMS/HospitalPathologyTestPrices/_List.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/HMS/HospitalPathologyTestPrices/_List.cshtml
@@ -19,8 +19,8 @@
                     {
                         <tr>
                             <td>@item.PathologyTestName</td>
+                            <td>@item.HospitalPathologyPriceCategory</td>
                             <td>@item.Price</td>
-
                             <td class="text-center">
                                 <a href="../@controllerName/Edit?hospitalPathologyTestPricesId=@item.HospitalPathologyTestPricesId" title="Update" class="btn btn-sm btn-soft-success btn-circle me-2"><i class="fas fa-edit"></i></a><span class="m-2">|</span>
                                 <a href="../@controllerName/Delete?hospitalPathologyTestPricesIds=@item.HospitalPathologyTestPricesId" title="Delete" class="btn btn-sm btn-soft-danger btn-circle"><i class="fas fa-trash-alt"></i></a>
