--- a/Coditech.Project/Admin/Coditech.Admin/Views/Gazette/GazetteChapterPageDetails/_List.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Gazette/GazetteChapterPageDetails/_List.cshtml
@@ -1,4 +1,4 @@
-﻿@model GazetteChaptersListViewModel
+﻿@model GazetteChaptersPageDetailListViewModel
 @{
     Layout = null;
     string controllerName = ViewContext.RouteData.Values["controller"].ToString();
@@ -13,17 +13,17 @@
         <table id="datatable" class="table table-striped table-bordered dt-responsive nowrap dataTable no-footer dtr-inline" style="border-collapse: collapse; border-spacing: 0px; width: 100%;" role="grid" aria-describedby="datatable_info">
             @Html.Partial("~/Views/Shared/Datatable/_DatatableColumns.cshtml", Model.PageListViewModel)
             <tbody>
-                @if (Model?.GazetteChaptersList?.Count > 0)
+                @if (Model?.GazetteChaptersPageDetailList?.Count > 0)
                 {
-                    foreach (var item in Model?.GazetteChaptersList)
+                    foreach (var item in Model?.GazetteChaptersPageDetailList)
                     {
                         <tr>
                             <td>@item.ChapterNumber</td>
                             <td>@item.ChapterName</td>
                             <td>@item.DistrictName</td>
                             <td class="text-center">
-                                <a href="../@controllerName/Edit?gazetteChaptersId=@item.GazetteChapterId" title="Update" class="btn btn-sm btn-soft-success btn-circle me-2"><i class="fas fa-edit"></i></a><span class="m-2">|</span>
-                                <a href="../@controllerName/Delete?gazetteChaptersIds=@item.GazetteChapterId" title="Delete" class="btn btn-sm btn-soft-danger btn-circle"><i class="fas fa-trash-alt"></i></a>
+                                <a href="../@controllerName/Edit?gazetteChaptersPageDetailId=@item.GazetteChapterPageDetailId" title="Update" class="btn btn-sm btn-soft-success btn-circle me-2"><i class="fas fa-edit"></i></a><span class="m-2">|</span>
+                                <a href="../@controllerName/Delete?gazetteChaptersPageDetailIds=@item.GazetteChapterPageDetailId" title="Delete" class="btn btn-sm btn-soft-danger btn-circle"><i class="fas fa-trash-alt"></i></a>
                             </td>
                         </tr>
                     }
