--- a/Coditech.Project/Admin/Coditech.Admin/Views/Gazette/GazetteChapterPageDetails/CreateEdit.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Gazette/GazetteChapterPageDetails/CreateEdit.cshtml
@@ -4,12 +4,6 @@
     ViewBag.Title = Model.GazetteChapterPageDetailId > 0 ? "Update Gazette Chapter Page Detail" : "Add Gazette Chapter Page Detail";
     string controllerName = ViewContext.RouteData.Values["controller"].ToString();
     string actionName = ViewContext.RouteData.Values["action"].ToString();
-    DropdownViewModel countryDropdown = new DropdownViewModel() { DropdownType = DropdownTypeEnum.Country.ToString(), DropdownName = "GeneralCountryMasterId", DropdownSelectedValue = Convert.ToString(Model.GeneralCountryMasterId), ChangeEvent = $"CoditechCommon.GetRegionListByCountryId()" };
-    DropdownViewModel regionDropdown = new DropdownViewModel() { DropdownType = DropdownTypeEnum.Region.ToString(), DropdownName = "GeneralRegionMasterId", DropdownSelectedValue = Convert.ToString(Model.GeneralRegionMasterId), Parameter = Convert.ToString(Model.GeneralCountryMasterId), ChangeEvent = $"CoditechCommon.GetDistrictListByRegionId()" };
-    DropdownViewModel districtDropdown = new DropdownViewModel() { DropdownType = DropdownTypeEnum.District.ToString(), DropdownName = "GeneralDistrictMasterId", DropdownSelectedValue = Convert.ToString(Model.GeneralDistrictMasterId), Parameter = Convert.ToString(Model.GeneralRegionMasterId) };   
-    DropdownViewModel chapterDropdown = new DropdownViewModel() { DropdownType = DropdownTypeEnum.GazetteChapter.ToString(), DropdownName = "GazetteChapterId", DropdownSelectedValue = Model.ChapterName };
-}
-
 }
 <!-- Page Content-->
 <div class="page-content mt-5">
@@ -34,34 +28,28 @@
                     <div class="card-body">
                         @using (Html.BeginForm(actionName, controllerName, FormMethod.Post))
                         {
+                            @Html.HiddenFor(m => m.GazetteChapterId)
                             @Html.HiddenFor(m => m.GazetteChapterPageDetailId)
                             <div class="row">
-                                <div class="col-lg-4">
+                                <div class="col-lg-12">
                                     <div class="mb-3">
-                                        @Html.LabelFor(x => x.GeneralCountryMasterId, new { @class = "form-label required" })
-                                        @Html.Partial("~/Views/Shared/Control/_DropdownList.cshtml", countryDropdown)
-                                        @Html.ValidationMessageFor(x => x.GeneralCountryMasterId)
-                                    </div>
-                                </div>
-                                <div class="col-lg-4">
-                                    <div class="mb-3">
-                                        @Html.LabelFor(x => x.GeneralRegionMasterId, new { @class = "form-label required" })
-                                        @Html.Partial("~/Views/Shared/Control/_DropdownList.cshtml", regionDropdown)
-                                        @Html.ValidationMessageFor(x => x.GeneralRegionMasterId)
-                                    </div>
-                                </div>
-                                <div class="col-lg-4">
-                                    <div class="mb-3">
-                                        @Html.LabelFor(x => x.GeneralDistrictMasterId, new { @class = "form-label required" })
-                                        @Html.Partial("~/Views/Shared/Control/_DropdownList.cshtml", districtDropdown)
-                                        @Html.ValidationMessageFor(x => x.GeneralDistrictMasterId)
+                                        @Html.LabelFor(x => x.ChapterNumber, new { @class = "form-label" })
+                                        @Html.TextBoxFor(x => x.ChapterNumber, new { @class = "form-control", @readonly = "readonly" })
+                                        @Html.ValidationMessageFor(x => x.ChapterNumber)
                                     </div>
                                 </div>
                                 <div class="col-lg-12">
                                     <div class="mb-3">
-                                        @Html.LabelFor(x => x.ChapterName, new { @class = "form-label required" })
-                                        @Html.Partial("~/Views/Shared/Control/_DropdownList.cshtml", chapterDropdown)
+                                        @Html.LabelFor(x => x.ChapterName, new { @class = "form-label" })
+                                        @Html.TextBoxFor(x => x.ChapterName, new { @class = "form-control", @readonly = "readonly" })
                                         @Html.ValidationMessageFor(x => x.ChapterName)
+                                    </div>
+                                </div>
+                                <div class="col-lg-12">
+                                    <div class="mb-3">
+                                        @Html.LabelFor(x => x.DistrictName, new { @class = "form-label" })
+                                        @Html.TextBoxFor(x => x.DistrictName, new { @class = "form-control", @readonly = "readonly" })
+                                        @Html.ValidationMessageFor(x => x.DistrictName)
                                     </div>
                                 </div>
                                 <div class="col-lg-12">
@@ -81,7 +69,11 @@
                                 <div class="col-lg-12">
                                     <div class="mb-3">
                                         @Html.LabelFor(x => x.PageContent, new { @class = "form-label required" })
-                                        @Html.TextAreaFor(x => x.PageContent, new { @class = "form-control" })
+                                        @Html.Partial("~/Views/Shared/Control/_HTMLEditor.cshtml", new HTMLEditorViewModel()
+                               {
+                                   EditorName = "PageContent",
+                                   EditorValue = Model.PageContent
+                               })
                                         @Html.ValidationMessageFor(x => x.PageContent)
                                     </div>
                                 </div>
