--- a/Coditech.Project/Admin/Coditech.Admin/Views/Gazette/GazetteChapterPageDetails/_List.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Gazette/GazetteChapterPageDetails/_List.cshtml
@@ -22,8 +22,17 @@
                             <td>@item.ChapterName</td>
                             <td>@item.DistrictName</td>
                             <td class="text-center">
-                                <a href="../@controllerName/Edit?gazetteChaptersPageDetailId=@item.GazetteChapterPageDetailId" title="Update" class="btn btn-sm btn-soft-success btn-circle me-2"><i class="fas fa-edit"></i></a><span class="m-2">|</span>
-                                <a href="../@controllerName/Delete?gazetteChaptersPageDetailIds=@item.GazetteChapterPageDetailId" title="Delete" class="btn btn-sm btn-soft-danger btn-circle"><i class="fas fa-trash-alt"></i></a>
+                                @if (item.GazetteChapterPageDetailId > 0)
+                                {
+                                    <a href="../@controllerName/Edit?gazetteChaptersPageDetailId=@item.GazetteChapterPageDetailId" title="Update" class="btn btn-sm btn-soft-success btn-circle me-2"><i class="fas fa-edit"></i></a>
+                                }
+                                else
+                                {
+                                    <a href="../@controllerName/Create?gazetteChapterId=@item.GazetteChapterId" title="Add" class="btn btn-sm btn-soft-success btn-circle me-2"><i class="fas fa-plus"></i></a>
+                                }
+                                <span class="m-2">|</span>
+                                <a href="../@controllerName/Delete?gazetteChaptersPageDetailIds=@item.GazetteChapterPageDetailId
+                                " title="Delete" class="btn btn-sm btn-soft-danger btn-circle"><i class="fas fa-trash-alt"></i></a>
                             </td>
                         </tr>
                     }
