--- a/Coditech.Project/Admin/Coditech.Admin/Views/HMS/HospitalDoctorOPDSchedule/_List.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/HMS/HospitalDoctorOPDSchedule/_List.cshtml
@@ -13,9 +13,9 @@
         <table id="datatable" class="table table-striped table-bordered dt-responsive nowrap dataTable no-footer dtr-inline" style="border-collapse: collapse; border-spacing: 0px; width: 100%;" role="grid" aria-describedby="datatable_info">
             @Html.Partial("~/Views/Shared/Datatable/_DatatableColumns.cshtml", Model.PageListViewModel)
             <tbody>
-                @if (Model?.HospitalDoctorList?.Count > 0)
+                @if (Model?.HospitalDoctorOPDScheduleList?.Count > 0)
                 {
-                    foreach (var item in Model?.HospitalDoctorList)
+                    foreach (var item in Model?.HospitalDoctorOPDScheduleList)
                     {
                         <tr>
                             <td style="text-align: center; width: 0px"><img src="@item.ImagePath" class="rounded-circle thumb-xs me-1" /></td>
