--- a/Coditech.Project/Admin/Coditech.Admin/Views/HMS/HospitalPatientAppointmentPurpose/List.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/HMS/HospitalPatientAppointmentPurpose/List.cshtml
@@ -1,6 +1,6 @@
 ﻿@model HospitalPatientAppointmentPurposeListViewModel
 @{
-    ViewBag.Title = "Hospital Patient Appointment Purpose List";
+    ViewBag.Title = "Patient Appointment Purpose List";
     string controllerName = ViewContext.RouteData.Values["controller"].ToString();
     string actionName = ViewContext.RouteData.Values["action"].ToString();
 }
@@ -11,7 +11,7 @@
             <div class="col-12">
                 <div class="card">
                     <div class="card-header">
-                        <span class="card-title">Hospital Patient Appointment Purpose List</span>
+                        <span class="card-title">Patient Appointment Purpose List</span>
                         <a class=" btn btn-sm btn-soft-primary float-end" href="/@controllerName/Create" role="button"><i class="fas fa-plus me-2"></i>Add Appointment Purpose</a>
 
                     </div>
