--- a/Coditech.Project/Admin/Coditech.Admin/Views/MediaManager/MediaManagerDetails/_MediaDetails.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/MediaManager/MediaManagerDetails/_MediaDetails.cshtml
@@ -14,6 +14,10 @@
             adminRoleMediaFolderActionModel = userInfo?.AdminRoleMediaFolderActionList.Where(x => x.AdminRoleMasterId == userInfo.SelectedAdminRoleMasterId).FirstOrDefault();
         }
     }
+    else
+    {
+        adminRoleMediaFolderActionModel = userInfo?.AdminRoleMediaFolderActionList.FirstOrDefault();
+    }
 }
 @Html.Hidden("ActiveFolderId", Model.ActiveFolderId)
 <div class="page-content mt-5" onload="CoditechCommon.LoadListByCentreCode('@controllerName', '@actionName')">
@@ -23,7 +27,7 @@
             <div class="col-lg-3">
                 <div class="card">
                     <div class="card-body">
-                        @if ((userInfo?.IsAdminUser ?? false) || adminRoleMediaFolderActionModel.SelectedMediaActions.Any(x => x.Equals("ViewFolder")))
+                        @if (adminRoleMediaFolderActionModel.SelectedMediaActions.Any(x => x.Equals(MediaFolderActionEnum.ViewFolder.ToString())))
                         {
                             <div class="files-nav">
                                 <div class="nav flex-column nav-pills" id="files-tab" aria-orientation="vertical">
@@ -55,7 +59,7 @@
                     <div class="card-header d-flex justify-content-between align-items-center">
                         <span class="card-title">Media Manager Upload</span>
                         <div>
-                            @if ((userInfo?.IsAdminUser ?? false) || adminRoleMediaFolderActionModel.SelectedMediaActions.Any(x => x.Equals("UploadFile")))
+                            @if (adminRoleMediaFolderActionModel.SelectedMediaActions.Any(x => x.Equals(MediaFolderActionEnum.UploadFile.ToString())))
                             {
                                 <form asp-action="UploadFile" asp-controller="MediaManager" enctype="multipart/form-data" method="post" style="display:inline;">
                                     <label class="btn btn-sm btn-soft-primary" for="imageUpload">
