--- a/Coditech.Project/Admin/Coditech.Admin/Views/MediaManager/MediaManagerDetails/_MediaFileList.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/MediaManager/MediaManagerDetails/_MediaFileList.cshtml
@@ -10,6 +10,10 @@
             adminRoleMediaFolderActionModel = userInfo?.AdminRoleMediaFolderActionList.Where(x => x.AdminRoleMasterId == userInfo.SelectedAdminRoleMasterId).FirstOrDefault();
         }
     }
+    else
+    {
+        adminRoleMediaFolderActionModel = userInfo?.AdminRoleMediaFolderActionList.FirstOrDefault();
+    }
 }
 <div class="card-body">
     <div class="d-flex file-box-content flex-wrap gap-3 justify-content-start">
@@ -17,7 +21,7 @@
         {
             <div class="file-box">
                 <div class="align-items-center card-action-block d-flex flex-row-reverse justify-content-between mb-2">
-                    @if ((userInfo?.IsAdminUser ?? false) || adminRoleMediaFolderActionModel.SelectedMediaActions.Any(x => x.Equals("DeleteFile")))
+                    @if (adminRoleMediaFolderActionModel.SelectedMediaActions.Any(x => x.Equals(MediaFolderActionEnum.DeleteFile.ToString())))
                     {
                         <a class="download-icon-link" data-media-id="@media.MediaId" onclick="openDeleteFileModal('@media.MediaId', '@media.ActiveFolderId')">
                             <i class="dripicons-cross file-download-icon"></i>
