--- a/Coditech.Project/Admin/Coditech.Admin/Views/HMS/HospitalDoctorVisitingCharges/CreateEdit.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/HMS/HospitalDoctorVisitingCharges/CreateEdit.cshtml
@@ -62,6 +62,19 @@
                                 </div>
                                 <div class="col-lg-3">
                                     <div class="mb-3">
+                                        @Html.LabelFor(x => x.InventoryGeneralItemLineId, new { @class = "form-label required" })
+                                        @Html.Partial("~/Views/Shared/Control/_DropdownList.cshtml", new DropdownViewModel()
+                               {
+                                   DropdownType = DropdownTypeEnum.InventoryGeneralServiecs.ToString(),
+                                   DropdownName = "InventoryGeneralItemLineId",
+                                   DropdownSelectedValue = Model.InventoryGeneralItemLineId
+                                    .ToString(),
+                               })
+                                        @Html.ValidationMessageFor(x => x.InventoryGeneralItemLineId)
+                                    </div>
+                                </div>
+                                <div class="col-lg-3">
+                                    <div class="mb-3">
                                         @Html.LabelFor(x => x.Charges, new { @class = "form-label required" })
                                         @Html.TextBoxFor(x => x.Charges, new { @class = "form-control", @onkeypress = "return CoditechCommon.ValidDecimalNumeric()" })
                                         @Html.ValidationMessageFor(x => x.Charges)
@@ -106,4 +119,4 @@
             });
         });
     </script>
-  }
+}
