--- a/Coditech.Project/Admin/Coditech.Admin/Views/HMS/HospitalRegistrationFee/CreateEditRegistrationFee.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/HMS/HospitalRegistrationFee/CreateEditRegistrationFee.cshtml
@@ -1,8 +1,17 @@
-﻿@model HospitalDoctorVisitingChargesViewModel
+﻿@using Coditech.Admin.Utilities;
+@model HospitalRegistrationFeeViewModel
 @{
-    ViewBag.Title = Model.HospitalDoctorVisitingChargesId > 0 ? "Update Hospital Doctor Visiting Charges" : "Add Hospital Doctor Visiting Charges";
+    ViewBag.Title = Model.HospitalRegistrationFeeId > 0 ? "Update Hospital Registration Fee" : "Add Hospital Registration Fee";
     string controllerName = ViewContext.RouteData.Values["controller"].ToString();
     string actionName = ViewContext.RouteData.Values["action"].ToString();
+    DropdownViewModel centreDropdown = new DropdownViewModel()
+            {
+                DropdownType = DropdownTypeEnum.AccessibleCentre.ToString(),
+                DropdownName = "CentreCode",
+                DropdownSelectedValue = Model.CentreCode,
+                ChangeEvent = "",
+                IsDisabled = Model.HospitalRegistrationFeeId > 0
+            };
 
 }
 <!-- Page Content-->
@@ -14,13 +23,13 @@
                     <div class="card-header">
                         <div class="row align-items-center">
                             <div class="col">
-                                @if (Model.HospitalDoctorVisitingChargesId > 0)
+                                @if (Model.HospitalRegistrationFeeId > 0)
                                 {
-                                    <h4 class="card-title">Update Hospital Doctor Visiting Charges: @Model.FirstName @Model.LastName </h4>
+                                    <h4 class="card-title">Update Hospital Registration Fee: @Model.FirstName @Model.LastName </h4>
                                 }
                                 else
                                 {
-                                    <h4 class="card-title">Create Hospital Doctor Visiting Charges: @Model.FirstName @Model.LastName</h4>
+                                    <h4 class="card-title">Create Hospital Registration Fee: @Model.FirstName @Model.LastName</h4>
                                 }
                             </div><!--end col-->
                         </div>  <!--end row-->
@@ -28,11 +37,27 @@
                     <div class="card-body">
                         @using (Html.BeginForm(actionName, controllerName, FormMethod.Post))
                         {
-                            @Html.HiddenFor(m => m.HospitalDoctorVisitingChargesId)
-                            @Html.HiddenFor(m => m.HospitalDoctorId)
+                            @Html.HiddenFor(m => m.HospitalRegistrationFeeId)
+                            @Html.HiddenFor(m => m.InventoryGeneralItemLineId)
                             @Html.HiddenFor(m => m.FirstName)
                             @Html.HiddenFor(m => m.LastName)
                             <div class="row">
+                                @if (Model.HospitalRegistrationFeeId == 0)
+                                {
+
+                                    <div class="col-lg-4">
+                                        <div class="mb-3">
+                                            @Html.LabelFor(x => x.CentreCode, new { @class = "form-label required" })
+                                            @Html.Partial("~/Views/Shared/Control/_DropdownList.cshtml", centreDropdown)
+                                            @Html.ValidationMessageFor(x => x.CentreCode)
+                                        </div>
+                                    </div>
+
+                                }
+                                else
+                                {
+                                    @Html.HiddenFor(m => m.CentreCode)
+                                }
                                 <div class="col-lg-3">
                                     <div class="mb-3">
                                         @Html.LabelFor(x => x.FromDate, new { @class = "form-label required" })
@@ -49,29 +74,9 @@
                                 </div>
                                 <div class="col-lg-3">
                                     <div class="mb-3">
-                                        @Html.LabelFor(x => x.AppointmentTypeEnumId, new { @class = "form-label required" })
-                                        @Html.Partial("~/Views/Shared/Control/_DropdownList.cshtml", new DropdownViewModel()
-                               {
-                                   DropdownSelectedValue = Model.AppointmentTypeEnumId.ToString(),
-                                   DropdownName = "AppointmentTypeEnumId",
-                                   GroupCode = DropdownTypeEnum.HospitalAppointmentType.ToString(),
-                                   IsRequired = true,
-                               })
-                                        @Html.ValidationMessageFor(x => x.AppointmentTypeEnumId)
-                                    </div>
-                                </div>
-                                <div class="col-lg-3">
-                                    <div class="mb-3">
                                         @Html.LabelFor(x => x.Charges, new { @class = "form-label required" })
                                         @Html.TextBoxFor(x => x.Charges, new { @class = "form-control", @onkeypress = "return CoditechCommon.ValidDecimalNumeric()" })
                                         @Html.ValidationMessageFor(x => x.Charges)
-                                    </div>
-                                </div>
-                                <div class="col-lg-9">
-                                    <div class="mb-3">
-                                        @Html.LabelFor(x => x.Remark, new { @class = "form-label" })
-                                        @Html.TextAreaFor(x => x.Remark, new { @class = "form-control" })
-                                        @Html.ValidationMessageFor(x => x.Remark)
                                     </div>
                                 </div>
                                 <div class="col-lg-3">
@@ -84,7 +89,7 @@
                                 </div>
                             </div>
                             <button type="submit" class="btn btn-success">@AdminResources.LabelSave</button>
-                            <a href="../@controllerName/GetHospitalDoctorVisitingChargesByDoctorIdList?hospitalDoctorId=@Model.HospitalDoctorId" class="btn btn-secondary"><i class="ft-x"></i>@AdminResources.LabelCancel</a>
+                            <a href="../@controllerName/List" class="btn btn-secondary"><i class="ft-x"></i>@AdminResources.LabelCancel</a>
                         }
                     </div>
                 </div>
