--- a/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralNotificationMaster/CreateEdit.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralNotificationMaster/CreateEdit.cshtml
@@ -29,32 +29,32 @@
                         {
                             @Html.HiddenFor(m => m.GeneralNotificationId)
                             <div class="row">
-                                <div class="col-lg-4">
-                                    <div class="mb-3">
-                                        @Html.LabelFor(x => x.NotificationDetails, new { @class = "form-label required" })
-                                        @Html.TextBoxFor(x => x.NotificationDetails, new { @class = "form-control" })
-                                        @Html.ValidationMessageFor(x => x.NotificationDetails)
-                                    </div>
-                                </div>
-                                <div class="col-lg-4">
+                                <div class="col-lg-6">
                                     <div class="mb-3">
                                         @Html.LabelFor(x => x.FromDate, new { @class = "form-label required" })
                                         @Html.TextBoxFor(x => x.FromDate, AdminGeneralHelper.DateFormatForTextBox(), new { @class = "form-control", @readonly = "readonly" })
                                         @Html.ValidationMessageFor(x => x.FromDate)
                                     </div>
                                 </div>
-                                <div class="col-lg-4">
+                                <div class="col-lg-6">
                                     <div class="mb-3">
                                         @Html.LabelFor(x => x.UptoDate, new { @class = "form-label required" })
                                         @Html.TextBoxFor(x => x.UptoDate, AdminGeneralHelper.DateFormatForTextBox(), new { @class = "form-control", @readonly = "readonly" })
                                         @Html.ValidationMessageFor(x => x.UptoDate)
                                     </div>
                                 </div>
-                                <div class="col-lg-4">
+                                <div class="col-lg-12">
+                                    <div class="mb-3">
+                                        @Html.LabelFor(x => x.NotificationDetails, new { @class = "form-label required" })
+                                        @Html.TextAreaFor(x => x.NotificationDetails, new { @class = "form-control" })
+                                        @Html.ValidationMessageFor(x => x.NotificationDetails)
+                                    </div>
+                                </div>
+                                <div class="col-lg-6">
                                     <div class="mb-3">
                                         @Html.LabelFor(x => x.IsActive, new { @class = "form-label" })
                                         <div class="form-check">
-                                            @Html.CheckBoxFor(x => x.IsActive, new { @class = "form-check-insut" })
+                                            @Html.CheckBoxFor(x => x.IsActive, new { @class = "form-check-input" })
                                         </div>
                                     </div>
                                 </div>
@@ -87,7 +87,7 @@
                         document.getElementById(this.id).value = '';
                     }
                 },
-                minDate: "-2Y",
+                minDate: "0M",
                 maxDate: "+2Y"
             });
         });
@@ -107,9 +107,9 @@
                         document.getElementById(this.id).value = '';
                     }
                 },
-                minDate: "-2Y",
+                minDate: "0M",
                 maxDate: "+2Y"
             });
         });
     </script>
-   }
+}
