--- a/Coditech.Project/Admin/Coditech.Admin/Views/HMS/HospitalPathologyTest/CreateEdit.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/HMS/HospitalPathologyTest/CreateEdit.cshtml
@@ -51,7 +51,7 @@
                                {
                                    DropdownSelectedValue = Model.TestSampleTypeEnumId.ToString(),
                                    DropdownName = "TestSampleTypeEnumId",
-                                   GroupCode = DropdownTypeEnum.TestSampleTypes.ToString()
+                                   GroupCode = DropdownTypeEnum.HospitalPathologyTestSampleTypes.ToString()
                                })
                                         @Html.ValidationMessageFor(x => x.TestSampleTypeEnumId)
                                     </div>
