--- a/Coditech.Project/Admin/Coditech.Admin/Views/MediaManager/MediaManagerDetails/_MediaFileList.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/MediaManager/MediaManagerDetails/_MediaFileList.cshtml
@@ -27,7 +27,7 @@
                             <i class="dripicons-cross file-download-icon"></i>
                         </a>
                     }
-                    <a href="@media.MediaPath" class="download-icon-link">
+                    <a href="@media.DownloadPath" class="download-icon-link" download>
                         <i class="dripicons-download file-download-icon"></i>
                     </a>
                 </div>
