--- a/Coditech.Project/Admin/Coditech.Admin/Views/HMS/HospitalRegistrationFee/_List.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/HMS/HospitalRegistrationFee/_List.cshtml
@@ -18,25 +18,12 @@
                     foreach (var item in Model?.HospitalRegistrationFeeList)
                     {
                         <tr>
-                            <td style="text-align: center; width: 0px">
-                                @if (!string.IsNullOrEmpty(item.ImagePath))
-                                {
-                                    <img src="@item.ImagePath" class="rounded-circle thumb-xs me-1" />
-                                }
-                                else
-                                {
-                                    <div class="avatar-box thumb-md align-self-center">
-                                        <span class="avatar-title bg-soft-pink rounded-circle">@item.FirstName.Substring(0, 1)@item.LastName.Substring(0, 1)</span>
-                                    </div>
-                                }
-                            </td>
-                            <td>@item.UAHNumber</td>
-                            <td>@item.FirstName</td>
-                            <td>@item.LastName</td>
-                            <td>@item.Gender</td>
-                            <td>@item.MobileNumber</td>                           
+                            <td>@item.RegistrationService</td>
+                            <td>@item.FromDate</td>
+                            <td>@item.UptoDate</td>
+                            <td>@item.Charges</td>
                             <td class="text-center">
-                                <a href="../@controllerName/UpdateRegistrationFee?hospitalRegistrationFeeId=@item.HospitalRegistrationFeeId&personId=@item.PersonId" title="Update" class="btn btn-sm btn-soft-success btn-circle"><i class="fas fa-edit"></i></a><span class="m-2">|</span>
+                                <a href="../@controllerName/Edit?hospitalRegistrationFeeId=@item.HospitalRegistrationFeeId" title="Update" class="btn btn-sm btn-soft-success btn-circle me-2"><i class="fas fa-edit"></i></a><span class="m-2">|</span>
                                 <a href="../@controllerName/Delete?hospitalRegistrationFeeIds=@item.HospitalRegistrationFeeId" title="Delete" class="btn btn-sm btn-soft-danger btn-circle"><i class="fas fa-trash-alt"></i></a>
                             </td>
                         </tr>
