--- a/Coditech.Project/Admin/Coditech.Admin/Views/Dashboard/Gym/GymOwnerDashboard.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Dashboard/Gym/GymOwnerDashboard.cshtml
@@ -1,14 +1,17 @@
 ﻿@using Coditech.Admin.Utilities;
 @using Coditech.Common.API.Model;
+@using Newtonsoft.Json
 @model DashboardViewModel
 @{
     ViewBag.Title = "Dashboard";
-    PieChartViewModel pieChartViewModel = new PieChartViewModel()
+    string[] XValues = ["Active Member", "InActive Member"];
+    int[] YValues = [Model.GymDashboardModel.ActiveMemberCount, Model.GymDashboardModel.InActiveMemberCount];
+    PieChartViewModel activeInActiveMemberPieChart = new PieChartViewModel()
             {
                 PieChartId = "ActiveInActiveMemberPieChart",
-                XValues = ["Active Member", "InActive Member"],
-                YValues = [10, 20],
-                Title = "test"
+                XValues = JsonConvert.SerializeObject(XValues),
+                YValues = JsonConvert.SerializeObject(YValues),
+                Title = "Active & InActive Member"
             };
 }
 <div class="page-content">
@@ -142,7 +145,7 @@
         </div><!--end row-->
         <div class="row">
             <div class="col-md-6 col-lg-3">
-                @Html.Partial("~/Views/Shared/Charts/PieChart.cshtml", pieChartViewModel)
+                @Html.Partial("~/Views/Shared/Charts/_PieChart.cshtml", activeInActiveMemberPieChart)
             </div>
         </div>
 
