--- a/Coditech.Project/Admin/Coditech.Admin/Views/Shared/Charts/_PieChart.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Shared/Charts/_PieChart.cshtml
@@ -13,6 +13,7 @@
             labels: xValues,
             datasets: [{
                 data: yValues,
+                backgroundColor: @Html.Raw(Model.BackgroundColor),
                 display: true,
             }]
         },
