--- a/Coditech.Project/Admin/Coditech.Admin/Views/Dashboard/Gym/GymOwnerDashboard.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Dashboard/Gym/GymOwnerDashboard.cshtml
@@ -6,32 +6,44 @@
     ViewBag.Title = "Dashboard";
     string[] XValues = ["Active Member", "InActive Member"];
     int[] YValues = [Model.GymDashboardModel.ActiveMemberCount, Model.GymDashboardModel.InActiveMemberCount];
+    string[] backgroundColor = ["rgba(42, 118, 244, 0.18)", "rgba(42, 118, 244, 0.30)"];
     PieChartViewModel activeInActiveMemberPieChart = new PieChartViewModel()
             {
                 PieChartId = "ActiveInActiveMemberPieChart",
                 XValues = JsonConvert.SerializeObject(XValues),
                 YValues = JsonConvert.SerializeObject(YValues),
-                Title = "Active & InActive Member"
+                BackgroundColor = JsonConvert.SerializeObject(backgroundColor),
             };
 }
 <div class="page-content">
     <div class="container-fluid">
+        <!-- Page-Title -->
         <div class="row">
             <div class="col-sm-12">
                 <div class="page-title-box">
                     <div class="row">
                         <div class="col">
-                            @*    <h4 class="page-title">Dasboard</h4> *@
-                            @* <ol class="breadcrumb">
+                            @*  <h4 class="page-title">Analytics</h4>
+                            <ol class="breadcrumb">
                             <li class="breadcrumb-item"><a href="javascript:void(0);">Dastone</a></li>
                             <li class="breadcrumb-item"><a href="javascript:void(0);">Dashboard</a></li>
                             <li class="breadcrumb-item active">Analytics</li>
                             </ol> *@
-                        </div><!--end col-->
-                    </div><!--end row-->
+                        </div>
+                        <div class="col-auto align-self-center">
+                            <a href="#" class="btn btn-sm btn-outline-primary" id="Dash_Date">
+                                <span class="day-name" id="Day_Name">Today:</span>&nbsp;
+                                <span class="" id="Select_date">@System.DateTime.Now.ToCoditechDateFormat()</span>
+                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-calendar align-self-center icon-xs ms-1"><rect x="3" y="4" width="18" height="18" rx="2" ry="2"></rect><line x1="16" y1="2" x2="16" y2="6"></line><line x1="8" y1="2" x2="8" y2="6"></line><line x1="3" y1="10" x2="21" y2="10"></line></svg>
+                            </a>
+                            @*  <a href="#" class="btn btn-sm btn-outline-primary">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-download align-self-center icon-xs"><path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"></path><polyline points="7 10 12 15 17 10"></polyline><line x1="12" y1="15" x2="12" y2="3"></line></svg>
+                            </a> *@
+                        </div>
+                    </div>
                 </div><!--end page-title-box-->
-            </div><!--end col-->
-        </div><!--end row-->
+            </div>
+        </div>
         <!-- end page title end breadcrumb -->
         <div class="row justify-content-center">
             <div class="col-md-6 col-lg-3">
@@ -51,7 +63,7 @@
                         </div>
                     </div><!--end card-body-->
                 </div><!--end card-->
-            </div> <!--end col-->
+            </div>
             <div class="col-md-6 col-lg-3">
                 <div class="card report-card">
                     <div class="card-body">
@@ -69,7 +81,7 @@
                         </div>
                     </div><!--end card-body-->
                 </div><!--end card-->
-            </div> <!--end col-->
+            </div>
             <div class="col-md-6 col-lg-3">
                 <div class="card report-card">
                     <div class="card-body">
@@ -87,13 +99,13 @@
                         </div>
                     </div><!--end card-body-->
                 </div><!--end card-->
-            </div> <!--end col-->
+            </div>
             <div class="col-md-6 col-lg-3">
                 <div class="card report-card">
                     <div class="card-body">
                         <div class="row d-flex justify-content-center">
                             <div class="col">
-                                <p class="text-dark mb-0 fw-semibold">Toady's Collection</p>
+                                <p class="text-dark mb-0 fw-semibold">Total Leads</p>
                                 <h3 class="m-0">@AdminGeneralHelper.FormatPriceWithCurrency(@Model.GymDashboardModel.ToadysTotalCollection)</h3>
                                 <p class="mb-0 text-truncate text-muted">&nbsp;@* <span class="text-success"><i class="mdi mdi-trending-up"></i>8.5%</span> New Sessions Today *@</p>
                             </div>
@@ -105,14 +117,14 @@
                         </div>
                     </div><!--end card-body-->
                 </div><!--end card-->
-            </div> <!--end col-->
+            </div>
             <div class="col-md-6 col-lg-3">
                 <div class="card report-card">
                     <div class="card-body">
                         <div class="row d-flex justify-content-center">
                             <div class="col">
-                                <p class="text-dark mb-0 fw-semibold">Weekly Collection</p>
-                                <h3 class="m-0">@AdminGeneralHelper.FormatPriceWithCurrency(@Model.GymDashboardModel.WeekTotalCollection)</h3>
+                                <p class="text-dark mb-0 fw-semibold">Today's Collection</p>
+                                <h3 class="m-0">@AdminGeneralHelper.FormatPriceWithCurrency(@Model.GymDashboardModel.ToadysTotalCollection)</h3>
                                 <p class="mb-0 text-truncate text-muted">&nbsp;@* <span class="text-success"><i class="mdi mdi-trending-up"></i>8.5%</span> New Sessions Today *@</p>
                             </div>
                             <div class="col-auto align-self-center">
@@ -123,14 +135,14 @@
                         </div>
                     </div><!--end card-body-->
                 </div><!--end card-->
-            </div> <!--end col-->
+            </div>
             <div class="col-md-6 col-lg-3">
                 <div class="card report-card">
                     <div class="card-body">
                         <div class="row d-flex justify-content-center">
                             <div class="col">
-                                <p class="text-dark mb-0 fw-semibold">Last 30 Day's Collection</p>
-                                <h3 class="m-0">@AdminGeneralHelper.FormatPriceWithCurrency(@Model.GymDashboardModel.MonthTotalCollection)</h3>
+                                <p class="text-dark mb-0 fw-semibold">Last @Model.NumberOfDaysRecord Day's Collection</p>
+                                <h3 class="m-0">@AdminGeneralHelper.FormatPriceWithCurrency(@Model.GymDashboardModel.DaywiseTotalCollection)</h3>
                                 <p class="mb-0 text-truncate text-muted">&nbsp;@* <span class="text-success"><i class="mdi mdi-trending-up"></i>8.5%</span> New Sessions Today *@</p>
                             </div>
                             <div class="col-auto align-self-center">
@@ -141,13 +153,76 @@
                         </div>
                     </div><!--end card-body-->
                 </div><!--end card-->
-            </div> <!--end col-->
-        </div><!--end row-->
-        <div class="row">
+            </div>
             <div class="col-md-6 col-lg-3">
-                @Html.Partial("~/Views/Shared/Charts/_PieChart.cshtml", activeInActiveMemberPieChart)
+                <div class="card report-card">
+                    <div class="card-body">
+                        <div class="row d-flex justify-content-center">
+                            <div class="col">
+                                <p class="text-dark mb-0 fw-semibold">Digital Payment Collection</p>
+                                <h3 class="m-0">@AdminGeneralHelper.FormatPriceWithCurrency(@Model.GymDashboardModel.DigitalPaymentCollection)</h3>
+                                <p class="mb-0 text-truncate text-muted">&nbsp;@* <span class="text-success"><i class="mdi mdi-trending-up"></i>8.5%</span> New Sessions Today *@</p>
+                            </div>
+                            <div class="col-auto align-self-center">
+                                <div class="report-main-icon bg-light-alt">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-clock align-self-center text-muted icon-sm"><circle cx="12" cy="12" r="10"></circle><polyline points="12 6 12 12 16 14"></polyline></svg>
+                                </div>
+                            </div>
+                        </div>
+                    </div><!--end card-body-->
+                </div><!--end card-->
+            </div>
+            <div class="col-md-6 col-lg-3">
+                <div class="card report-card">
+                    <div class="card-body">
+                        <div class="row d-flex justify-content-center">
+                            <div class="col">
+                                <p class="text-dark mb-0 fw-semibold">Manual Payment Collection</p>
+                                <h3 class="m-0">@AdminGeneralHelper.FormatPriceWithCurrency(@Model.GymDashboardModel.ManualPaymentCollection)</h3>
+                                <p class="mb-0 text-truncate text-muted">&nbsp;@* <span class="text-success"><i class="mdi mdi-trending-up"></i>8.5%</span> New Sessions Today *@</p>
+                            </div>
+                            <div class="col-auto align-self-center">
+                                <div class="report-main-icon bg-light-alt">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-clock align-self-center text-muted icon-sm"><circle cx="12" cy="12" r="10"></circle><polyline points="12 6 12 12 16 14"></polyline></svg>
+                                </div>
+                            </div>
+                        </div>
+                    </div><!--end card-body-->
+                </div><!--end card-->
             </div>
         </div>
+        <div class="row">
+            <div class="col-lg-3">
+                <div class="card">
+                    <div class="card-header">
+                        <div class="row align-items-center">
+                            <div class="col">
+                                <h4 class="card-title text-dark">Active & InActive Members</h4>
+                            </div>
+                        </div>
+                    </div><!--end card-header-->
+                    <div class="card-body">
+                        <div class="text-center" style="position: relative; padding-top:0px !important">
+                            @Html.Partial("~/Views/Shared/Charts/_PieChart.cshtml", activeInActiveMemberPieChart)
+                        </div><!--end card-body-->
+                    </div><!--end card-->
+                </div>
+            </div>
+            <div class="col-lg-9">
+                <div class="card">
+                    <div class="card-header">
+                        <div class="row align-items-center">
+                            <div class="col">
+                                <h4 class="card-title">Last @Model.NumberOfDaysRecord Day's Financial Overview</h4>
+                            </div>
+                        </div>
+                    </div><!--end card-header-->
+                    <div class="card-body">
+                        <div class="" style="position: relative;">
+                        </div>
+                    </div><!--end card-body-->
+                </div><!--end card-->
+            </div>
 
-    </div><!-- container -->
-</div>
+        </div><!-- container -->
+    </div>
