--- a/Coditech.Project/Admin/Coditech.Admin/Views/MediaManager/MediaManagerDetails/_MediaDetails.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/MediaManager/MediaManagerDetails/_MediaDetails.cshtml
@@ -44,11 +44,7 @@
 
                 <div class="card">
                     <div class="card-body">
-                        @* <small class="float-end">62%</small> *@
                         <h6 class="mt-0 mb-0">@Model.TotalFileSize MB Used</h6>
-@*                         <div class="progress" style="height: 5px;">
-                            <div class="progress-bar bg-success" role="progressbar" style="width: 62%;" aria-valuenow="62" aria-valuemin="0" aria-valuemax="100"></div>
-                        </div> *@
                     </div><!--end card-body-->
                 </div><!--end card-->
             </div>
@@ -69,14 +65,10 @@
                                     <input type="hidden" name="folderId" value="@Model.ActiveFolderId" />
                                 </form>
                             }                            
-                            @* <a class="btn btn-sm btn-soft-primary" role="button" for="imageUpload">
-                                <i class="fas fa-upload me-2"></i>Upload File
-                            </a> *@
-                            @* <input type="file" id="imageUpload" style="display: none;" /> *@
                         </div>
                     </div>
                     <div class="card-body">
-                        @Html.Partial("~/Views/MediaManager/MediaManagerDetails/_MediaFileList.cshtml", Model.MediaFiles)
+                        @Html.Partial("~/Views/MediaManager/MediaManagerDetails/_MediaFileList.cshtml", Model)
                     </div>
                 </div>
             </div>
